syntax = "proto3";
package petuh;

message Empty {}

enum Personality {
  DENIS = 0;
  ZYL = 1;
  PETUH = 2;
}

message LLMRequest {
  Personality personality = 1;
  string query = 2;
}

message LLMResponse {
  string response = 1;
}

service PetuhLLM {
  rpc GenerateResponse (LLMRequest) returns (LLMResponse);
}

message SavedResponse {
  string request = 1;
  string response = 2;
}

message GetResponsesResponse {
  repeated SavedResponse responses = 1;
}

service PetuhData {
  rpc GetResponses (Empty) returns (GetResponsesResponse);
  rpc AddResponse (SavedResponse) returns (GetResponsesResponse);
  rpc RemoveResponse (SavedResponse) returns (GetResponsesResponse);
}
